--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   --lighter-gray-primary: #b1b1b1;
   --blue-primary: #0a41c9;
 }
-  
+
 @media (prefers-color-scheme: dark) {
   :root {
     --darker-primary: #0a0708;
@@ -22,5 +22,5 @@
 
 body {
   color: var(--darker-primary);
-  background: linear-gradient(0deg, var(--gray-primary) 25%, var(--lighter-gray-primary) 100%);
+  background: radial-gradient(circle, var(--gray-primary) 0%, var(--lighter-gray-primary) 100%);
 }
